--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
 
 	</dependencies>
-	<!-- <build> -->
-	<!-- <finalName>devops</finalName> -->
-	<!-- </build> -->
+	 <build>
+	<finalName>project1</finalName> 
+	 </build> 
 </project>
